Design dla przycisków i napisów.

--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -23,8 +23,10 @@
                 android:id="@+id/category1Left_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_marginStart="@dimen/margin_large"
-                android:layout_marginTop="@dimen/margin_medium"
+
+                android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.gospodarkaLeft)}"
@@ -38,8 +40,9 @@
                 android:id="@+id/category2Left_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_marginStart="@dimen/margin_large"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.spoleczenstwoLeft)}"
@@ -54,7 +57,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
+                android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.politykaWLeft)}"
@@ -69,7 +73,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.politykaZLeft)}"
@@ -83,6 +88,7 @@
                 android:id="@+id/category1Right_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_marginStart="64dp"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:text="@{String.valueOf(resultViewModel.result.gospodarkaRight)}"
@@ -95,6 +101,7 @@
             <TextView
                 android:id="@+id/category2Right_textView"
                 android:layout_width="wrap_content"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
                 android:layout_marginEnd="@dimen/margin_large"
@@ -111,6 +118,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
                 android:layout_marginEnd="@dimen/margin_large"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:text="@{String.valueOf(resultViewModel.result.politykaWRight)}"
                 app:layout_constraintBaseline_toBaselineOf="@+id/category3Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,6 +130,7 @@
                 android:id="@+id/category4Right_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_marginStart="64dp"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:text="@{String.valueOf(resultViewModel.result.politykaZRight)}"
@@ -136,6 +145,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
@@ -148,6 +158,7 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
@@ -163,6 +174,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_large"
@@ -179,6 +191,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:text="@string/polityka_zewnętrzna_text"
@@ -223,6 +236,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
+                style="@style/Widget.PC.Button.Delete"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
