--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -25,6 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_medium"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_medium"
                 android:layout_marginBottom="@dimen/margin_medium"
@@ -39,9 +40,11 @@
             <TextView
                 android:id="@+id/question_textView"
                 android:layout_width="match_parent"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
+
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:text="@{testViewModel.question}"
@@ -56,9 +59,9 @@
                 android:id="@+id/agree2_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="64dp"
+                style="@style/Widget.PC.Button.StrongAgree"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:onClick="@{() -> testViewModel.onButtonClickNextStrongAgree()}"
@@ -71,7 +74,6 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/agree_button"
                 android:layout_width="match_parent"
-                app:cornerRadius="@dimen/radius_medium"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
@@ -79,6 +81,7 @@
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:onClick="@{() -> testViewModel.onButtonClickNextAgree()}"
                 android:text="@string/agree_button_text"
+                style="@style/Widget.PC.Button.Agree"
                 app:layout_constraintBottom_toTopOf="@+id/neutral_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -91,8 +94,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
-                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginEnd="@dimen/margin_large"
+                style="@style/Widget.PC.Button.Neutral"
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:onClick="@{() -> testViewModel.onButtonClickNextNeutral()}"
                 android:text="@string/neutral_button_text"
@@ -105,8 +108,8 @@
                 android:id="@+id/disagree_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginStart="@dimen/margin_large"
+                style="@style/Widget.PC.Button.Disagree"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
@@ -123,8 +126,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
-                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginEnd="@dimen/margin_large"
+                style="@style/Widget.PC.Button.StrongDisagree"
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:onClick="@{() -> testViewModel.onButtonClickNextStrongDisagree()}"
                 android:text="@string/disagree2_button_text"
@@ -135,13 +138,13 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/previus_question_button"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cornerRadius="@dimen/radius_medium"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="64dp"
+                style="@style/Widget.PC.Button"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="64dp"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:layout_marginBottom="@dimen/margin_large"
                 android:onClick="@{() -> testViewModel.onButtonClickPrevius()}"
                 android:text="@string/previus_question_button_text"
                 app:layout_constraintBottom_toBottomOf="parent"
