--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -7,7 +7,6 @@
         android:id="@+id/title_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/layoutBackground"
         tools:context=".screens.title.TitleFragment">
 
 
@@ -16,8 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_medium"
+            style="@style/Widget.PC.Button"
             android:layout_marginEnd="@dimen/margin_medium"
-            app:cornerRadius="@dimen/radius_medium"
             android:text="@string/start_test_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,8 +28,8 @@
             android:id="@+id/history_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/Widget.PC.Button"
             android:layout_marginEnd="@dimen/margin_medium"
-            app:cornerRadius="@dimen/radius_medium"
             android:layout_marginStart="@dimen/margin_medium"
             android:text="@string/history_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
