--- a/app/src/main/res/layout/list_item_test_result.xml
+++ b/app/src/main/res/layout/list_item_test_result.xml
@@ -27,7 +27,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="#373737"
+            android:background="@color/colorPrimaryDark"
             app:layout_constraintStart_toStartOf="parent" />
 
         <RelativeLayout
@@ -62,6 +62,7 @@
         <TextView
             android:id="@+id/testResult_id"
             android:layout_width="0dp"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_medium"
             android:layout_marginTop="@dimen/margin_medium"
@@ -73,11 +74,12 @@
             tools:text="ID OF TESTRESULT" />
 
         <TextView
-            android:id="@+id/gospodarkaLeft_string"
+            android:id="@+id/testDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_medium"
             android:layout_marginEnd="@dimen/margin_medium"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
             android:layout_marginBottom="@dimen/margin_medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
