--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#272727</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="layoutBackground">#121212</color>
-    <color name="authorDescription">#BB86FC</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="selected_red_color">#ba000d</color>
+    <color name="colorPrimary">#E0E0E0</color>
+    <color name="colorPrimaryDark">#FBB8AC</color>
+    <color name="colorAccent">#FEDBD0</color>
+    <color name="textColorPrimary">#442C2E</color>
+    <color name="buttonStrongAgree">#2e7d32</color>
+    <color name="buttonAgree">#43a047</color>
+    <color name="buttonNeutral">#9e9e9e</color>
+    <color name="buttonStrongDisagree">#d32f2f</color>
+    <color name="buttonDisgree">#ef5350</color>
+    <color name="toolbarIconColor">@color/textColorPrimary</color>
+    <color name="loginPageBackgroundColor">#FFFFFF</color>
+    <color name="productGridBackgroundColor">#FFFFFF</color>
+    <color name="textInputOutlineColor">#FBB8AC</color>
 </resources>
