--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="margin_large">16dp</dimen>
     <dimen name="dotImage_size_large">24dp</dimen>
     <dimen name="radius_medium">4dp</dimen>
+    <dimen name="margin_small">4dp</dimen>
 </resources>
