dopasowanie rozmiaru czcionki, przestrzeni pomiędzy wynikami.

--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -24,10 +24,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
+                android:textSize="18sp"
                 android:layout_marginStart="@dimen/margin_large"
-
                 android:layout_marginTop="@dimen/margin_small"
-                android:layout_marginEnd="64dp"
+                android:layout_marginEnd="128dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.gospodarkaLeft)}"
                 app:layout_constraintBottom_toTopOf="@+id/textView2"
@@ -41,9 +41,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
+                android:textSize="18sp"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_small"
-                android:layout_marginEnd="64dp"
+                android:layout_marginEnd="128dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.spoleczenstwoLeft)}"
                 app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -56,10 +57,11 @@
                 android:id="@+id/category3Left_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:layout_marginStart="@dimen/margin_large"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_marginTop="@dimen/margin_small"
-                android:layout_marginEnd="64dp"
+                android:layout_marginEnd="128dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.politykaWLeft)}"
                 app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -74,8 +76,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_small"
+                android:textSize="18sp"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:layout_marginEnd="64dp"
+                android:layout_marginEnd="128dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.politykaZLeft)}"
                 app:layout_constraintBottom_toTopOf="@+id/relativelayoutResultFragment"
@@ -87,6 +90,7 @@
             <TextView
                 android:id="@+id/category1Right_textView"
                 android:layout_width="wrap_content"
+                android:textSize="18sp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_marginStart="64dp"
@@ -104,6 +108,7 @@
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
+                android:textSize="18sp"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:text="@{String.valueOf(resultViewModel.result.spoleczenstwoRight)}"
                 app:layout_constraintBaseline_toBaselineOf="@+id/category2Left_textView"
@@ -116,6 +121,7 @@
                 android:id="@+id/category3Right_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:layout_marginStart="64dp"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
@@ -130,6 +136,7 @@
                 android:id="@+id/category4Right_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
                 android:layout_marginStart="64dp"
                 android:layout_marginEnd="@dimen/margin_large"
@@ -146,6 +153,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
+                android:textSize="18sp"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
@@ -157,6 +165,7 @@
 
             <TextView
                 android:id="@+id/textView2"
+                android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:layout_height="wrap_content"
@@ -176,6 +185,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:layout_marginStart="@dimen/margin_large"
+                android:textSize="18sp"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
@@ -190,6 +200,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
+                android:textSize="18sp"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 android:layout_marginEnd="@dimen/margin_large"
