--- a/app/src/main/res/layout/list_item_test_result.xml
+++ b/app/src/main/res/layout/list_item_test_result.xml
@@ -64,6 +64,7 @@
             android:layout_width="0dp"
             android:textAppearance="?attr/textAppearanceSubtitle1"
             android:layout_height="wrap_content"
+            android:textSize="15sp"
             android:layout_marginStart="@dimen/margin_medium"
             android:layout_marginTop="@dimen/margin_medium"
             android:layout_marginEnd="@dimen/margin_medium"
@@ -76,6 +77,7 @@
         <TextView
             android:id="@+id/testDate"
             android:layout_width="0dp"
+            android:textSize="15sp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_medium"
             android:layout_marginEnd="@dimen/margin_medium"
