--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-        <fragment
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
+        <androidx.drawerlayout.widget.DrawerLayout
+            android:id="@+id/drawer_layout"
             android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/main_navigation"
-            tools:ignore="FragmentTagUsage" />
+            android:layout_width="match_parent">
 
-</merge>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                        <androidx.appcompat.widget.Toolbar
+                            android:id="@+id/toolbar"
+                            style="@style/Widget.PC.Toolbar"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize">
+
+                                <ImageView
+                                    android:id="@+id/hero_image"
+                                    android:layout_width="100dp"
+                                    android:layout_height="match_parent"
+                                    app:srcCompat="@drawable/ic_launcher_foreground"
+                                    android:contentDescription="@string/app_name"/>
+                        </androidx.appcompat.widget.Toolbar>
+
+                        <fragment
+                            android:id="@+id/nav_host_fragment"
+                            android:name="androidx.navigation.fragment.NavHostFragment"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:defaultNavHost="true"
+                            app:navGraph="@navigation/main_navigation"
+                            tools:ignore="FragmentTagUsage" />
+                </LinearLayout>
+
+        <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/drawer_view"/>
+    </androidx.drawerlayout.widget.DrawerLayout>
+</layout>
