--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable name="viewModel" type="com.example.kompaspolityczny.screens.title.TitleFragmentViewModel"/>
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/title_layout"
         android:layout_width="match_parent"
@@ -18,6 +23,7 @@
             style="@style/Widget.PC.Button"
             android:layout_marginEnd="@dimen/margin_medium"
             android:text="@string/start_test_button_text"
+            android:onClick="@{() -> viewModel.onToTestButtonClicked()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +38,7 @@
             android:layout_marginEnd="@dimen/margin_medium"
             android:layout_marginStart="@dimen/margin_medium"
             android:text="@string/history_button_text"
+            android:onClick="@{() -> viewModel.onToHistoryButtonClicked()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/start_test_button"
             app:layout_constraintStart_toStartOf="@+id/start_test_button"
