--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
                             android:layout_height="?attr/actionBarSize">
 
                                 <ImageView
-                                    android:id="@+id/hero_image"
+                                    android:id="@+id/app_image"
                                     android:layout_width="150dp"
                                     android:layout_height="match_parent"
                                     app:srcCompat="@drawable/ic_launcher_foreground"
