--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -18,7 +18,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="16dp"
                 android:clipToPadding="true"
-                tools:context=".screens.about.AboutFragment">
+                tools:context=".home.AboutFragment">
 
 
                 <TextView
