--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -22,8 +22,7 @@
     <fragment
         android:id="@+id/testFragment"
         android:name="com.example.kompaspolityczny.screens.test.TestFragment"
-        android:label=" "
-        tools:layout="@layout/test_fragment">
+        android:label=" ">
         <action
             android:id="@+id/action_testFragment_to_resultFragment"
             app:destination="@id/resultFragment"
@@ -34,8 +33,7 @@
     <fragment
         android:id="@+id/resultFragment"
         android:name="com.example.kompaspolityczny.screens.result.ResultFragment"
-        android:label=" "
-        tools:layout="@layout/result_fragment">
+        android:label="Wyniki">
         <argument
             android:name="testResultKey"
             app:argType="long" />
@@ -49,8 +47,7 @@
     <fragment
         android:id="@+id/historyFragment"
         android:name="com.example.kompaspolityczny.screens.history.HistoryFragment"
-        android:label="Historia testów"
-        tools:layout="@layout/fragment_history">
+        android:label="Historia testów">
         <action
             android:id="@+id/action_historyFragment_to_resultFragment"
             app:destination="@id/resultFragment" />
@@ -58,5 +55,5 @@
     <fragment
         android:id="@+id/pc_about"
         android:name="com.example.kompaspolityczny.screens.about.AboutFragment"
-        android:label="AboutFragment" />
+        android:label="O aplikacji" />
 </navigation>
