--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,12 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:fitsSystemWindows="true">
 
                         <androidx.appcompat.widget.Toolbar
                             android:id="@+id/toolbar"
-                            style="@style/Widget.PC.Toolbar"
+                            android:theme="@style/Widget.PC.Toolbar"
                             android:layout_width="match_parent"
                             android:layout_height="?attr/actionBarSize">
 
@@ -23,7 +24,7 @@
                                     android:layout_width="150dp"
                                     android:layout_height="match_parent"
                                     app:srcCompat="@drawable/ic_launcher_foreground"
-                                    android:contentDescription="@string/app_name"/>
+                                    android:contentDescription="@string/app_name" />
                         </androidx.appcompat.widget.Toolbar>
 
                         <fragment
