--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="@string/menu_about_string" android:id="@+id/pc_about"/>
+    <item android:title="@string/menu_history_string" android:id="@+id/historyFragment"/>
 </menu>
