--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:fitsSystemWindows="true">
+                    android:orientation="vertical">
 
                         <androidx.appcompat.widget.Toolbar
                             android:id="@+id/toolbar"
@@ -21,10 +20,10 @@
 
                                 <ImageView
                                     android:id="@+id/app_image"
-                                    android:layout_width="150dp"
+                                    android:layout_width="60dp"
                                     android:layout_height="match_parent"
-                                    app:srcCompat="@drawable/ic_launcher_foreground"
-                                    android:contentDescription="@string/app_name" />
+                                    android:contentDescription="@string/app_name"
+                                    app:srcCompat="@drawable/ic_launcher_foreground" />
                         </androidx.appcompat.widget.Toolbar>
 
                         <fragment
