--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
                         <androidx.appcompat.widget.Toolbar
                             android:id="@+id/toolbar"
-                            android:theme="@style/Widget.PC.Toolbar"
+                            style="@style/Widget.PC.Toolbar"
                             android:layout_width="match_parent"
                             android:layout_height="?attr/actionBarSize">
 
