--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
                             android:id="@+id/toolbar"
                             style="@style/Widget.PC.Toolbar"
                             android:layout_width="match_parent"
-                            android:layout_height="?attr/actionBarSize">
+                            android:layout_height="?attr/actionBarSize"
+                            app:elevation="0dp">
 
                                 <ImageView
                                     android:id="@+id/app_image"
@@ -31,6 +32,7 @@
                             android:name="androidx.navigation.fragment.NavHostFragment"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:elevation="8dp"
                             app:defaultNavHost="true"
                             app:navGraph="@navigation/main_navigation"
                             tools:ignore="FragmentTagUsage" />
