--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+            android:background="?attr/colorAccent"
         android:layout_gravity="start"
         app:menu="@menu/drawer_view"/>
     </androidx.drawerlayout.widget.DrawerLayout>
